#14560 cc replacement - avoid resulting in CC col not being grouped (#14648)
* cc converter - fix error on replacing group key

* sql_select_group_same_column it

* correct select node collection

* ut

* handle order by, having clause

* style

* style

* style

* cc test

* LENIENT